force-app/main/default/objects/DripCampaign__c/DripCampaign__c.object-meta.xml
<CustomObject>
    <label>Drip Campaign</label>
    <nameField>
        <label>Drip Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>