force-app/main/default/objects/DripCampaign__c/fields/Auto_Enroll_On__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enroll_On__c</fullName>
    <label>Auto Enroll On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>