force-app/main/default/objects/DripCampaign__c/fields/Total_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_Days__c</fullName>
    <label>Total Duration Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>